--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -1,4 +1,5 @@
 # This is a basic workflow to help you get started with Actions
+#!/usr/bin/bash env bash
 name: login
 
 # Controls when the workflow will run
